# fastapi-postgres-dbtest

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  run_tests.sh  start.bat  start.sh
alembic/: env.py
app/: __init__.py  main.py
app/core/: config.py  database.py  logging.py  metrics.py
app/core/crud/: base.py
app/load_tests/store_system/: locustfile.py
app/load_tests/store_system/scenario0/: stores.py
app/store_system/: __init__.py  crud.py  models.py  schemas.py
app/store_system/routers/: customers.py  product_arrivals.py  products.py  purchases.py  store_inspections.py  stores.py
app/store_system/tests/: conftest.py  factories.py
app/store_system/tests/api/: test_customers.py  test_product_arrivals.py  test_products.py  test_purchases.py  test_store_inspections.py  test_stores.py
grafana/datasources/: fastapi_dashboard.json
prometheus/: prometheus.yml
scripts/: deploy.sh  init_db.sh  reset_db_and_migrations.sh  run_locust.bat  run_locust.sh
